updated fitlife to healthmate

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <p>
-        © 2025 FitLife |
+        © 2025 HealthMate |
         <a href="/contact">Contact Us</a>
     </p>
 </footer>
