--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Register | FitLife</title>
+    <title>Register | HealthMate</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
