--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact Us | FitLife</title>
+    <title>Contact Us | HealthMate</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
