--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <div class="main-navbar">
     <a href="/profile" class="logo-box">
-        FitLife
+        HealthMate
     </a>
 
     <div class="nav-menu">
